Closed Bug 409433 Opened 18 years ago Closed 18 years ago

XPConnect should never allow GC off the main thread

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

References

Details

Attachments

(1 file)

xpconnect has some machinery to only allow GC to occur on the main thread. It is disabled in xpconnect by default, but our DOM turns it on. Because cycle collector is main-thread only we should not allow GC to ever occur off the main thread.
Attachment #294242 - Flags: superreview?(mrbkap)
Attachment #294242 - Flags: review?(jst)
Attachment #294242 - Flags: review?(jst) → review+
So, XPConnect is supposedly a standalone library that could have non-Gecko users. Do we really want to take this option away from them? Right now, I think we even build with XPCONNECT_STANDALONE, but I'm not sure. If we do this, are we going to take more steps towards making XPConnect a more Gecko-centric thing?
I think it would make the most sense to force main thread if and only if cycle collector is in use by the xpconnect consumer. Or is that always the case?
If we build with XPCONNECT_STANDALONE still, it's blind luck; if things work correctly. I think we should take this patch and if there are consumers for standalone XPConnect, they shouldn't find it too hard to produce either a local hack or trunk-acceptable patch to make it not only build but also work.
Comment on attachment 294242 [details] [diff] [review] XPConnect allows GC on the main thread only, rev. 1 All right, I accept shaver's argument. Is there a place where non-Gecko XPConnect users might hang out so we can announce this change?
Attachment #294242 - Flags: superreview?(mrbkap) → superreview+
Fixed on trunk. I'll post to md.platform
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Depends on: 411531
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: