Bug 409433 - XPConnect should never allow GC off the main thread, r=mrbkap sr=jst a=luser